--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.3",
+        "fa": "^1.0.1",
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
-        "vue-template-compiler": "^2.7.14"
+        "vue-template-compiler": "^2.7.14",
+        "vuejs-datepicker": "^1.6.2"
     }
 }
