--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fortawesome/fontawesome-free": "^6.3.0",
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.3",
+        "draggable": "^4.2.0",
         "fa": "^1.0.1",
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
