--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
         "vue-template-compiler": "^2.7.14",
+        "vue3-promise-dialog": "^0.3.4",
         "vuejs-datepicker": "^1.6.2"
     }
 }
