--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "draggable": "^4.2.0",
         "fa": "^1.0.1",
         "moment": "^2.29.4",
+        "popup": "^0.0.3",
+        "unoverlay-vue": "^0.3.0",
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
         "vue-template-compiler": "^2.7.14",
